--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/icon.ico">
+  <meta name="description" content="Resume Website">
+  <meta name="author" content="862178323">
 
-  <title>John Doe - Business Administration</title>
-
+  <title>Teresa Nguyen - Biochemistry Student</title>
+  
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Teresa Nguyen</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/firstnamelastname.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,27 +58,27 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Teresa Nguyen
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Biochemistry Major📚</div>
+        <p class="lead mb-4">I am a second year Biochemistry major student in the University of California Riverside. I have taken and completed general chemistry and biology along with basic computer science. I am also taking physics and organic chemistry along with my second class involving computer science. I am planning to graduate in the year 2023 and then attend medical school to become a doctor. I plan on being a thoracic surgeon which means that I would specialize in surgery on patients that have problems in the chest area like the heart and lungs.  <br><br>
 
-        Enter bio here<br><br>
+        I have basic first aid training and also know how to take care of outpatients who are recovering from COVID outside of the hospital. I have had first aid training from Red Cross in High School and have renewed it last year. For COVID outpatient, my dad was an outpatient and I was in charge of taking care of him when he was home. Therefore I know what needs to be done like taking the heart rate, respiratory/breathing of the patient (should be 92 and above), temperature, and in one minutes, how many deep breaths does the patient take. The process of which a nurse would check in on the outpatient virtually would be 2 to 3 weeks. Afterward, the patient family would monitor and only call the nurse back if there is a setback.<br><br>
 
-        Enter bio here
+        In high school is where I got most of my experience. I was part of the Red Cross Club for all four years in High School and in those four years, I was part of the club's board member. As a board member for four years, I have handled the club's finances, recruitment, and handling/hosting the blood drive that happened every 8 weeks during the school year. The blood drive would take at least 6 weeks of planning as the teacher needs to cooperate along with getting students to volunteer to donate their blood. Those volunteers would need to meet certain requirements which is part of the board's job to check. My senior year, I worked in a healthcare social work office. There I manage to do paperwork, fix information, translator, and several other jobs that were assigned to me. I worked with workers that were older than me and gained a lot of experience from it. I worked there for the entire summer and each week was focused on a different  task assigned to me by my manager.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
-            <i class="fab fa-linkedin-in"></i>
-          </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-1" href="https://github.com/tnguy903">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
-            <i class="fab fa-twitter"></i>
+          <a target="_blank" id="socialicon-2" href="https://www.facebook.com/teresa.nguyen.5680/">
+            <i class="fab fa-facebook"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
-            <i class="fa fa-envelope"></i>
+          <a target="_blank" id="socialicon-3" href="https://www.instagram.com/holyzteresa/">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a target="_blank" id="socialicon-4" href="https://twitter.com/TeresaN88929614">
+            <i class="fa fa-twitter"></i>
           </a>
         </div>
       </div>
@@ -92,48 +92,52 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Internship</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.ssa.ocgov.com/">Orange County Social Service Agency</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Handle, seperated, and prepared paperwork for different people X<br> 
+              • Work at reception and as a Vietnamese translator<br>
+              • Input and udpated each person information and fix any mistakes online if there were any<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">June 2019 - August 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
+            <h3 class="mb-0">Club</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Red Cross<br> 
+                •Organize school blood drive every 8 weeks from the start of the school year to the end<br>
+                •Handled club runs and raise money for the club<br>
+              • Mental Health Awareness<br>
+                •One of the clubs founder<br>
+                •Spread mental health to the school and destigmatize it<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">September 2016 - June 2019</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
+            <h3 class="mb-0">Church Volunteer Work</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Helped the priest during mass<br>
+            • Taught a class in Bible studies <br>
+            • Part of a traditional dance group and help with the little girls<br>
+            • Taught other children on certain things to help the church<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">May 2008 - Present</span>
           </div>
         </div>
 
@@ -152,33 +156,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Undergraduate in Biochemistry</div>
+            <div>Second Year Student getting BS</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">October 2019 - Present</span>
           </div>
         </div>
 
@@ -191,7 +173,12 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/image 2.jpg" width="500px">
+            <img src="img/image 4.jpg" width="500px"><br>
+            <img src="img/image 8.jpg" width="500px">
+            <img src="img/image 9.jpg" width="500px"><br>
+            <img src="img/image 10.jpg" width="500px">
+            <img src="img/image 11.jpg" width="500px"><br>
         </center>
       </div>
     </section>
